--- a/rubric_rm/verl/trainer/config/ppo_trainer.yaml
+++ b/rubric_rm/verl/trainer/config/ppo_trainer.yaml
@@ -165,7 +165,7 @@ custom_reward_function:
 algorithm:
   gamma: 1.0
   lam: 1.0
-  adv_estimator: gae
+  adv_estimator: rloo
   kl_penalty: kl  # how to estimate kl divergence
   kl_ctrl:
     type: fixed
@@ -173,6 +173,7 @@ algorithm:
 
 trainer:
   balance_batch: True
+  val_before_train: False
   total_epochs: 10
   total_training_steps: null
   project_name: verl_examples
