--- a/rubric_rm/verl/trainer/config/ppo_trainer.yaml
+++ b/rubric_rm/verl/trainer/config/ppo_trainer.yaml
@@ -32,9 +32,9 @@ actor_rollout_ref:
     grad_clip: 1.0
     clip_ratio: 0.2
     entropy_coeff: 0.001
-    use_kl_loss: False # True for GRPO
+    use_kl_loss: True # True for GRPO
     use_torch_compile: True # False to disable torch compile
-    kl_loss_coef: 0.0 # for grpo
+    kl_loss_coef: 0.001 # for grpo
     kl_loss_type: low_var_kl # for grpo
     ppo_epochs: 1
     shuffle: False
@@ -165,7 +165,7 @@ custom_reward_function:
 algorithm:
   gamma: 1.0
   lam: 1.0
-  adv_estimator: rloo
+  adv_estimator: grpo
   kl_penalty: kl  # how to estimate kl divergence
   kl_ctrl:
     type: fixed
