--- a/rubric_rm/verl/trainer/config/ppo_trainer.yaml
+++ b/rubric_rm/verl/trainer/config/ppo_trainer.yaml
@@ -31,10 +31,10 @@ actor_rollout_ref:
     ppo_max_token_len_per_gpu: 16384 # n * ${data.max_prompt_length} + ${data.max_response_length}
     grad_clip: 1.0
     clip_ratio: 0.2
-    entropy_coeff: 0.001
-    use_kl_loss: True # True for GRPO
+    entropy_coeff: 0.001 # Turn this into 0
+    use_kl_loss: True # True for GRPO   
     use_torch_compile: True # False to disable torch compile
-    kl_loss_coef: 0.001 # for grpo
+    kl_loss_coef: 0.001 # for grpo  # Turn this into 0 for DAPO
     kl_loss_type: low_var_kl # for grpo
     ppo_epochs: 1
     shuffle: False
